# paperclip

./: .gitattributes  .gitignore  AGENTS.md  SECURITY.md  package.json  pnpm-lock.yaml
.agents/skills/create-agent-adapter/: SKILL.md
.agents/skills/secure-commit-push/: SKILL.md
.claude/: launch.json
.claude/skills/: secure-commit-push
.githooks/: pre-commit
.github/: CODEOWNERS
cli/: package.json
cli/src/: index.ts
cli/src/__tests__/: company-delete.test.ts  company.test.ts  onboard.test.ts  worktree.test.ts
cli/src/commands/: configure.ts  onboard.ts  run.ts  worktree-lib.ts
docs/: docs.json
docs/adapters/: claude-local.md
docs/api/: secrets.md
docs/deploy/: secrets.md
docs/guides/board-operator/: managing-secrets.md
scripts/: claude-local-health-check.ps1
scripts/launchers/windows/: README.md  backup-data.bat  install-paperclip.bat  launch-paperclip.bat  migrate-from-upstream.bat  rebuild-paperclip.bat  stop-paperclip.bat  stop-paperclip.ps1  update-paperclip.bat
server/: package.json
server/src/: agent-auth-jwt.ts  app.ts  config.ts  index.ts  version.ts  worktree-config.ts
server/src/__tests__/: adapter-model-refresh.test.ts  agent-cross-tenant-authz-routes.test.ts  agent-forbidden-paths-helper.test.ts  agent-live-run-routes.test.ts  agent-permissions-routes.test.ts  agent-skills-routes.test.ts  app-hmr-port.test.ts  approval-routes-idempotency.test.ts  auth-jwt-non-uuid-sub.test.ts  authz-company-access.test.ts  calendar-routes.test.ts  calendar-schedule.test.ts  calendar-service.test.ts  chat-providers-adapter.test.ts  chat-routes.test.ts  chat-tools.test.ts  check-for-updates.test.ts  claude-local-execute.test.ts  claude-models.test.ts  codex-local-execute.test.ts  company-branding-route.test.ts  company-portability-routes.test.ts  company-skills-routes.test.ts  cursor-local-adapter-environment.test.ts  cursor-local-execute.test.ts  environment-live-ssh.test.ts  external-mcp-integration.test.ts  external-mcp.test.ts  feedback-share-client.test.ts  gemini-local-adapter-environment.test.ts  gemini-local-execute.test.ts  gemini-models.test.ts  health.test.ts  (+45 more)
skills/paperclip/: SKILL.md
tools/paperclip-launcher/: Cargo.toml  README.md  build.bat  build.rs
tools/paperclip-launcher/src/: main.rs
ui/: package.json  vitest.setup.ts
ui/src/: App.tsx  index.css
(+304 files in other folders)
