[package]
name = "paperclip-launcher"
version = "0.2.0"
edition = "2021"
publish = false
description = "Hidden-window launcher + tray icon for paperclip on Windows"

[[bin]]
name = "paperclip"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
tray-icon = "0.21"
tao = "0.34"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
