[package]
name = "paperclip-launcher"
version = "0.2.3"
edition = "2021"
publish = false
description = "Hidden-window launcher + tray icon for paperclip on Windows"
build = "build.rs"

[[bin]]
name = "paperclip"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
tray-icon = "0.21"
tao = "0.34"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Desktop toast notifications for reminders fired by the server. Polled by a
# background thread and surfaced even when no browser is open.
tauri-winrt-notification = "0.8"
# Loopback HTTP client for the notification poll/ack calls. default-features
# off = no TLS pulled in; the launcher only ever talks to local http.
ureq = { version = "2", default-features = false }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
# Embeds a recolored paperclip icon as the exe's icon resource. We can't
# theme-swap embedded resources at runtime, so we bake a light-stroke
# variant at build time using the `ico` crate to decode/re-encode the
# favicon and `winresource` (which calls windres on the GNU toolchain) to
# bind it as the exe's primary icon.
winresource = "0.1"
ico = "0.4"
